# ML

all code/final/: baseline.py  feature_tool_p10.py  feature_tool_p30.py  feature_tool_p30_lagged.py  feature_tool_p60.py  lasso.py  scatter.py  station21.csv  station21_10_p10.csv  station21_10_p30.csv  station21_10_p60.csv  station21_11_p10_mean.csv  station21_11_p30.csv  station21_12_p10.csv  station21_12_p30.csv  station21_12_p30_mean.csv  station21_12_p60.csv  station21_13_p10.csv  station21_13_p60.csv  station21_3_p10.csv  station21_8_p10.csv  station21_9_p10.csv  station5.csv  station5_10_p10.csv  station5_10_p30.csv  station5_10_p60.csv  station5_3_p10.csv  station5_8_p10.csv  svr.py
all code/group/: 1k_data.csv  data.csv  knn.py  lsr.py  test.py
all code/week2/: a-i.py  a-ii-iii.py  addFeature.py  b-i-1.py  c-i.py  data  newdata.txt
all code/week3/: data  ia.py  ib-c.py  ib-compare.py  ie-compare.py  ie.py  ii-a.py  ii-c.py
all code/week4/: data1  data2  ia-cross-C.py  id-roc.py  (+4 more)
assignment-final/: report.docx
assignment-week2/: report.docx
assignment-week3/: report.docx
assignment-week4/: report.docx
assignment-week5/: group66 -  project proposal.docx
assignment-week8/: report.docx
ml_group-project_66-master/: 3k_data.csv  5k_data.csv  README.md  Ridge.ipynb  svc.py
ml_group-project_66-master/QtWeb/: Balance_thread.cpp  Balance_thread.h  CMakeLists.txt  kraken_api.cpp  kraken_api.h  kraken_websocket.cpp  kraken_websocket.h  main.cpp  out33.txt  price_ladder_structure.cpp  price_ladder_structure.h  send_order_thread.cpp  send_order_thread.h
(+9 files in other folders)
